# safe_whale

./: .gitignore  .pylintrc  CHANGELOG.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: publish_to_pypi.yml  release.yml  tox.yml
docs/: PRIOR_ART.md  hosts.md  index.md  installation.md  specification.md
docs/usage/: cli.md  pipx-compatibility.md
safe_whale/: __about__.py  __init__.py  __main__.py  catalog.py  cleanup.py  cli.py  container.py  discovery.py  encoding.py  help.py  launchers.py  metadata.py  models.py  prompts.py  pyodide_browser.py  runner.py  settings.py  storage.py
safe_whale/ui/: __init__.py  main_window.py  tooltips.py
scripts/: basic_checks.sh
spec/: codex.md  learnings.md  spec.md  spec_v2.md
tests/: test_catalog.py  test_cleanup.py  test_cli.py  test_container.py  test_discovery.py  test_integration.py  test_launchers.py  test_metadata.py  test_models.py  test_prompts.py  test_pyodide_browser.py  test_runner.py  test_storage.py  test_storage_env.py
