[project]
name = "safe-whale"
version = "0.1.0"
description = "Run Python CLI tools safely in Docker containers — as easy as pipx"
readme = "README.md"
authors = [{ name = "Matthew Martin", email = "matthewdeanmartin@gmail.com" }]
keywords = ["safe-whale", "docker", "containers", "pipx", "tkinter"]
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = [
    "platformdirs>=4.0",
]

[project.urls]
Repository = "https://github.com/matthewdeanmartin/safe_whale"
issues = "https://github.com/matthewdeanmartin/safe_whale/issues/"

[project.scripts]
safe-whale = "safe_whale.cli:main"
safe_whale = "safe_whale.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["safe_whale"]
include = [
    "safe_whale/**/*.py",
    "safe_whale/py.typed",
    "/README.md",
    "LICENSE",
]

[tool.hatch.build.targets.sdist]
include = ["/README.md", "LICENSE", "/safe_whale", "/tests"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "black>=26.0.0",
    "isort>=6.0.0",
    "mypy>=1.18.0",
    "pylint>=4.0.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.12.0",
    "pre-commit>=4.0.0",
    "tox>=4.0",
    "tox-uv>=1.0",
    "keepachangelog-manager-fork>=6.1.1,<7",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-q --timeout=120 -m 'not integration'"
norecursedirs = ["vendor", "scripts", "dist", "build"]
markers = [
    "integration: requires a running Docker daemon",
]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
py_version = 310

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["safe_whale", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "UP", "SIM", "RUF", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["B011", "S101"]
"tests/**/*.py" = ["B011", "S101"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B108", "B310", "B404", "B603", "B607"]

# changelogmanager (keepachangelog-manager-fork) drives the release workflows.
# See .github/workflows/create_draft_release.yml and release.yml.
[tool.changelogmanager.versioning]
scheme = "semver"

[tool.changelogmanager.validation]
enforce_preamble = true
format = "auto"

[tool.changelogmanager.defaults]
error_format = "github"
commit_schema = "keepachangelog"
schema_version = "current"

[[tool.changelogmanager.components]]
name = "default"
changelog = "CHANGELOG.md"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
